<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:context=".Frictional">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pump">
        </TextView>
        <EditText
                android:id="@+id/pump"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/piped">

        </TextView>
        <EditText
                android:id="@+id/piped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/piped2">

        </TextView>
        <EditText
                android:id="@+id/piped2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pipel1">

        </TextView>
        <EditText
                android:id="@+id/pipel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pipel2">

        </TextView>
        <EditText
                android:id="@+id/pipel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/density">

        </TextView>
        <EditText
                android:id="@+id/density"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dynamique">

        </TextView>
        <EditText
                android:id="@+id/dynamique"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        <Button
                android:id="@+id/res2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn">

        </Button>
        <TextView
                android:id="@+id/math2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>
</ScrollView>